some reflections got deprecated